@@ -1,5 +1,10 @@
 2007-05-13  Wakaba  <wakaba@suika.fam.cx>
 
+	* content-model-1.dat: Tests for |a| content model are added.
+	Tests for |legend| content model are added.
+
+2007-05-13  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-model-1.dat: Tests for |li| content model are added.
 
 2007-05-13  Wakaba  <wakaba@suika.fam.cx>
